tests/rascal/negative/parse_errors/L3/formals1.ob
MODULE Bla;

PROCEDURE F(VAR : INTEGER);
BEGIN
  x := 1
END F;

BEGIN
  F()
END Bla.
